# Jhuki

./: .coveragerc  .flake8  .pre-commit-config.yaml  README.md  dissipation_ref.html  genindex.html  grid_ref.html  index.html  objects.inv  parfile_ref.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  simfactory_ref.html  twochargedpunctures_ref.html  twopunctures_ref.html
.github/workflows/: document.yml  test.yml
_modules/: index.html
_modules/jhuki/: dissipation.html  grid.html  parfile.html  simfactory.html  twochargedpunctures.html  twopunctures.html
_sources/: index.rst.txt  twochargedpunctures_ref.rst.txt
_static/: bizstyle.js  documentation_options.js
docs/: conf.py  dissipation_ref.rst  grid_ref.rst  index.rst  parfile_ref.rst  simfactory_ref.rst  twopunctures_ref.rst
jhuki/: __init__.py  base.py  dissipation.py  grid.py  nanchecker.py  parfile.py  simfactory.py  twochargedpunctures.py  twopunctures.py
precactus/: __init__.py  parfile.py
tests/: test_dissipation.py  test_externals.py  test_grid.py  test_jhuki.py  test_nanchecker.py  test_parfile.py  test_precactus.py  test_simfactory.py  test_twochargedpunctures.py  test_twopunctures.py
