[tool.poetry]
name = "precactus"
version = "0.1.0"
description = "Utilities to prepare Einstein Toolkit simulations"
authors = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sbozzolo/PreCactus"
repository = "https://github.com/sbozzolo/PreCactus"
documentation = "https://sbozzolo.github.io/PreCactus"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sbozzolo/PreCactus/issues"

[tool.poetry.dependencies]
python = "^3.6"
ConfigArgParse = "^1.2.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | docs
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
