[tool.poetry]
name = "jhuki"
version = "0.1.0-dev1"
description = "Utilities to prepare Einstein Toolkit simulations"
authors = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sbozzolo/Jhuki"
repository = "https://github.com/sbozzolo/Jhuki"
documentation = "https://sbozzolo.github.io/Jhuki"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sbozzolo/Jhuki/issues"

[tool.poetry.dependencies]
python = "^3.6"
ConfigArgParse = "^1.2.3"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | docs
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
