[tool.poetry]
name = "jhuki"
version = "0.1.0-dev9"
description = "Utilities to prepare Einstein Toolkit simulations"
authors = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sbozzolo/Jhuki"
repository = "https://github.com/sbozzolo/Jhuki"
documentation = "https://sbozzolo.github.io/Jhuki"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sbozzolo/Jhuki/issues"

[tool.poetry.dependencies]
python = "^3.6.2"
ConfigArgParse = "^1.2.3"
sympy = "^1.7.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
Sphinx = "^3.5.4"
pre-commit = "^2.16.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | docs
  | jhuki/externals
)/
'''

[tool.isort]
profile = "black"
skip_glob = "externals"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
